--- a/gui/forms/MainWindow.ui
+++ b/gui/forms/MainWindow.ui
@@ -21,7 +21,7 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_4">
-    <item row="0" column="0" colspan="2">
+    <item row="0" column="0" colspan="5">
      <widget class="QFrame" name="glFrame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -49,154 +49,7 @@
       </layout>
      </widget>
     </item>
-    <item row="6" column="1">
-     <spacer name="horizontalSpacer_2">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>40</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="6" column="0">
-     <widget class="QFrame" name="controlFrame">
-      <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
-      </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_3">
-           <item>
-            <widget class="QLabel" name="scaleLabel">
-             <property name="text">
-              <string>Zoom     </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QDoubleSpinBox" name="scaleSpinBox">
-             <property name="maximum">
-              <double>1000.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.500000000000000</double>
-             </property>
-             <property name="value">
-              <double>1.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="openCenterLavel">
-             <property name="text">
-              <string>Center (</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="xTranslateSpinBox">
-             <property name="minimum">
-              <number>-1000</number>
-             </property>
-             <property name="maximum">
-              <number>1000</number>
-             </property>
-             <property name="singleStep">
-              <number>10</number>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="commaCenterLabel">
-             <property name="text">
-              <string>,</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="yTranslateSpinBox">
-             <property name="minimum">
-              <number>-1000</number>
-             </property>
-             <property name="maximum">
-              <number>1000</number>
-             </property>
-             <property name="singleStep">
-              <number>10</number>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="closeCenterLabel">
-             <property name="text">
-              <string>)</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <item>
-            <widget class="QPushButton" name="unRefineOnceButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>&lt;</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="stopButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>||</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="refineOnceButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>&gt;</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="refineButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>&gt;&gt;</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="0" column="2" rowspan="7">
+    <item row="0" column="5" rowspan="7">
      <widget class="QFrame" name="optionFrame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -211,15 +64,15 @@
           <bool>true</bool>
          </property>
          <property name="currentIndex">
-          <number>3</number>
+          <number>2</number>
          </property>
          <widget class="QWidget" name="preProcessPage">
           <property name="geometry">
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>304</width>
-            <height>432</height>
+            <width>252</width>
+            <height>69</height>
            </rect>
           </property>
           <attribute name="label">
@@ -229,7 +82,7 @@
            <item row="0" column="0" colspan="2">
             <widget class="QComboBox" name="preProcessComboBox">
              <property name="currentIndex">
-              <number>1</number>
+              <number>0</number>
              </property>
              <item>
               <property name="text">
@@ -258,7 +111,7 @@
             <x>0</x>
             <y>0</y>
             <width>315</width>
-            <height>432</height>
+            <height>132</height>
            </rect>
           </property>
           <attribute name="label">
@@ -305,9 +158,9 @@
             </widget>
            </item>
            <item row="4" column="1">
-            <widget class="QSpinBox" name="automaticTriangleSelectionSpinBox">
-             <property name="maximum">
-              <number>60</number>
+            <widget class="QDoubleSpinBox" name="automaticTriangleSelectionDoubleSpinBox">
+             <property name="value">
+              <double>38.000000000000000</double>
              </property>
             </widget>
            </item>
@@ -318,7 +171,7 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>304</width>
+            <width>295</width>
             <height>432</height>
            </rect>
           </property>
@@ -326,6 +179,9 @@
            <string>Nuevo Punto</string>
           </attribute>
           <layout class="QFormLayout" name="formLayout_3">
+           <property name="fieldGrowthPolicy">
+            <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+           </property>
            <item row="0" column="0">
             <widget class="QLabel" name="label">
              <property name="text">
@@ -333,38 +189,11 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="outsideNewPointCaseLabel">
-             <property name="text">
-              <string>Si Nuevo punto cae fuera de la malla:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0" colspan="2">
+           <item row="2" column="0" colspan="2">
             <widget class="QComboBox" name="newPointMethodComboBox">
              <property name="currentIndex">
-              <number>5</number>
+              <number>0</number>
              </property>
-             <item>
-              <property name="text">
-               <string>Punto Medio Arista Más Larga</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Centroide</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Circuncentro</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Off-Center</string>
-              </property>
-             </item>
              <item>
               <property name="text">
                <string>Lepp - Bisección</string>
@@ -382,7 +211,7 @@
              </item>
              <item>
               <property name="text">
-               <string>Lepp - Delaunay</string>
+               <string>Lepp - Ruppert</string>
               </property>
              </item>
              <item>
@@ -392,7 +221,14 @@
              </item>
             </widget>
            </item>
-           <item row="3" column="0" colspan="2">
+           <item row="4" column="0">
+            <widget class="QLabel" name="outsideNewPointCaseLabel">
+             <property name="text">
+              <string>Si Nuevo punto cae fuera de la malla:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0" colspan="2">
             <widget class="QComboBox" name="outsideNewPointCaseComboBox">
              <item>
               <property name="text">
@@ -413,8 +249,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>304</width>
-            <height>432</height>
+            <width>296</width>
+            <height>232</height>
            </rect>
           </property>
           <attribute name="label">
@@ -513,8 +349,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>304</width>
-            <height>432</height>
+            <width>151</width>
+            <height>43</height>
            </rect>
           </property>
           <attribute name="label">
@@ -555,6 +391,161 @@
         </widget>
        </item>
       </layout>
+     </widget>
+    </item>
+    <item row="5" column="0" rowspan="2">
+     <widget class="QFrame" name="controlFrame">
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <item>
+            <widget class="QLabel" name="scaleLabel">
+             <property name="text">
+              <string>Zoom     </string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QDoubleSpinBox" name="scaleSpinBox">
+             <property name="maximum">
+              <double>1000.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>0.500000000000000</double>
+             </property>
+             <property name="value">
+              <double>1.000000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="openCenterLavel">
+             <property name="text">
+              <string>Center (</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="xTranslateSpinBox">
+             <property name="minimum">
+              <number>-1000</number>
+             </property>
+             <property name="maximum">
+              <number>1000</number>
+             </property>
+             <property name="singleStep">
+              <number>10</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="commaCenterLabel">
+             <property name="text">
+              <string>,</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="yTranslateSpinBox">
+             <property name="minimum">
+              <number>-1000</number>
+             </property>
+             <property name="maximum">
+              <number>1000</number>
+             </property>
+             <property name="singleStep">
+              <number>10</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="closeCenterLabel">
+             <property name="text">
+              <string>)</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <item>
+            <widget class="QPushButton" name="unRefineOnceButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>&lt;</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="stopButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>||</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="refineOnceButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="refineButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>&gt;&gt;</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="infoControl">
+      <property name="text">
+       <string>Control</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1" rowspan="2">
+     <widget class="QPlainTextEdit" name="infoPlainTextEdit">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLabel" name="infoLabel">
+      <property name="text">
+       <string>Información</string>
+      </property>
      </widget>
     </item>
    </layout>
