--- a/gui/forms/MainWindow.ui
+++ b/gui/forms/MainWindow.ui
@@ -21,8 +21,8 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_4">
-    <item row="0" column="0" colspan="5">
-     <widget class="QFrame" name="glFrame">
+    <item row="0" column="0" colspan="2">
+     <widget class="QFrame" name="viewerFrame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -49,7 +49,7 @@
       </layout>
      </widget>
     </item>
-    <item row="0" column="5" rowspan="7">
+    <item row="0" column="5" rowspan="6">
      <widget class="QFrame" name="optionFrame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -64,14 +64,14 @@
           <bool>true</bool>
          </property>
          <property name="currentIndex">
-          <number>2</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="preProcessPage">
           <property name="geometry">
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>295</width>
+            <width>362</width>
             <height>434</height>
            </rect>
           </property>
@@ -113,65 +113,62 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>306</width>
-            <height>434</height>
+            <width>426</width>
+            <height>100</height>
            </rect>
           </property>
           <attribute name="label">
            <string>Selección de Triángulo</string>
           </attribute>
-          <layout class="QFormLayout" name="formLayout_7">
-           <property name="fieldGrowthPolicy">
-            <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-           </property>
-           <item row="1" column="0" colspan="2">
+          <layout class="QFormLayout" name="formLayout_5">
+           <item row="0" column="0" colspan="2">
             <widget class="QComboBox" name="automaticTriangleSelectionComboBox">
              <property name="enabled">
               <bool>true</bool>
              </property>
              <item>
               <property name="text">
-               <string>Menor ángulo interno</string>
+               <string>Ángulo Interno Menor</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Menor longitud de arista</string>
+               <string>Arista Más Pequeña</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Menor ángulo interno, Aristas restrigidas</string>
+               <string>Arista Más Pequeña, Prioridad Bordes y Aristas Restringidas</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Menor Circumcentro</string>
+               <string>Menor Circunradio</string>
               </property>
              </item>
             </widget>
            </item>
-           <item row="4" column="0" colspan="2">
-            <widget class="QCheckBox" name="repeatSelectedTriangleCheckBox">
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_2">
              <property name="text">
-              <string>Repetir triángulo hasta destruir</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
+              <string>Mínimo Ángulo Interior [º]</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
+           <item row="1" column="1">
             <widget class="QDoubleSpinBox" name="automaticTriangleSelectionDoubleSpinBox">
              <property name="value">
               <double>20.000000000000000</double>
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_2">
+           <item row="2" column="0" colspan="2">
+            <widget class="QCheckBox" name="repeatSelectedTriangleCheckBox">
              <property name="text">
-              <string>Mínimo Ángulo Interior [º]</string>
+              <string>Repetir triángulo hasta destruir</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -182,8 +179,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>340</width>
-            <height>434</height>
+            <width>192</width>
+            <height>70</height>
            </rect>
           </property>
           <attribute name="label">
@@ -217,17 +214,22 @@
              </item>
              <item>
               <property name="text">
+               <string>Lepp-Delaunay</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
                <string>Lepp-Centroide</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Lepp-Ruppert</string>
+               <string>Üngor</string>
               </property>
              </item>
              <item>
               <property name="text">
-               <string>Off-Center</string>
+               <string>Lepp-Ruppert</string>
               </property>
              </item>
             </widget>
@@ -239,8 +241,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>295</width>
-            <height>434</height>
+            <width>205</width>
+            <height>43</height>
            </rect>
           </property>
           <attribute name="label">
@@ -279,8 +281,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>295</width>
-            <height>434</height>
+            <width>204</width>
+            <height>43</height>
            </rect>
           </property>
           <attribute name="label">
@@ -313,7 +315,7 @@
       </layout>
      </widget>
     </item>
-    <item row="5" column="0" rowspan="2">
+    <item row="4" column="0" rowspan="2">
      <widget class="QFrame" name="controlFrame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
@@ -321,151 +323,170 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
-       <item row="0" column="0">
-        <layout class="QVBoxLayout" name="verticalLayout_2">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="infoControl">
+         <property name="text">
+          <string>Control</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_3">
-           <item>
-            <widget class="QLabel" name="scaleLabel">
-             <property name="text">
-              <string>Zoom     </string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QDoubleSpinBox" name="scaleSpinBox">
-             <property name="maximum">
-              <double>1000.000000000000000</double>
-             </property>
-             <property name="singleStep">
-              <double>0.500000000000000</double>
-             </property>
-             <property name="value">
-              <double>1.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="openCenterLavel">
-             <property name="text">
-              <string>Center (</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="xTranslateSpinBox">
-             <property name="minimum">
-              <number>-1000</number>
-             </property>
-             <property name="maximum">
-              <number>1000</number>
-             </property>
-             <property name="singleStep">
-              <number>10</number>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="commaCenterLabel">
-             <property name="text">
-              <string>,</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QSpinBox" name="yTranslateSpinBox">
-             <property name="minimum">
-              <number>-1000</number>
-             </property>
-             <property name="maximum">
-              <number>1000</number>
-             </property>
-             <property name="singleStep">
-              <number>10</number>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="closeCenterLabel">
-             <property name="text">
-              <string>)</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
+          <widget class="QLabel" name="scaleLabel">
+           <property name="text">
+            <string>Zoom     </string>
+           </property>
+          </widget>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2">
-           <item>
-            <widget class="QPushButton" name="unRefineOnceButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>&lt;</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="stopButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>||</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="refineOnceButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>&gt;</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QPushButton" name="refineButton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>&gt;&gt;</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
+          <widget class="QDoubleSpinBox" name="scaleSpinBox">
+           <property name="maximum">
+            <double>1000.000000000000000</double>
+           </property>
+           <property name="singleStep">
+            <double>0.500000000000000</double>
+           </property>
+           <property name="value">
+            <double>1.000000000000000</double>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="openCenterLavel">
+           <property name="text">
+            <string>Center (</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="xTranslateSpinBox">
+           <property name="minimum">
+            <number>-1000</number>
+           </property>
+           <property name="maximum">
+            <number>1000</number>
+           </property>
+           <property name="singleStep">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="commaCenterLabel">
+           <property name="text">
+            <string>,</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="yTranslateSpinBox">
+           <property name="minimum">
+            <number>-1000</number>
+           </property>
+           <property name="maximum">
+            <number>1000</number>
+           </property>
+           <property name="singleStep">
+            <number>10</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="closeCenterLabel">
+           <property name="text">
+            <string>)</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QLabel" name="selectionTriangleLabel">
+           <property name="text">
+            <string>Selección Triángulo</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="manualRadioButton">
+           <property name="text">
+            <string>Manual</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="automaticRadioButton">
+           <property name="text">
+            <string>Automático</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QPushButton" name="stopButton">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>||</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="refineOnceButton">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>&gt;</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="refineButton">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>&gt;&gt;</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="infoControl">
-      <property name="text">
-       <string>Control</string>
+    <item row="4" column="1" rowspan="2">
+     <widget class="QFrame" name="frame">
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
       </property>
-     </widget>
-    </item>
-    <item row="5" column="1" rowspan="2">
-     <widget class="QPlainTextEdit" name="infoPlainTextEdit">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
       </property>
-     </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QLabel" name="infoLabel">
-      <property name="text">
-       <string>Información</string>
-      </property>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0" rowspan="3" colspan="2">
+        <widget class="QTextEdit" name="infoTextEdit">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
